SubBt/force-app/main/default/objects/Site__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>