SubBt/force-app/main/default/objects/Site__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <label>Site Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>